Fixed bug where extra space was displayed on bottom buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,7 +46,7 @@
   --key-secondary-bg: hsl(268, 47%, 21%);
   --key-secondary-shadow: hsl(290, 70%, 36%);
   --key-secondary-text-color: hsl(52, 100%, 62%);
-  --key-primary-text-color: hsl(0, 0, 100%);
+  --key-primary-text-color: white;
 }
 
 .theme-switches {
@@ -85,7 +85,7 @@
 
 .action-key {
   font-size: 1rem;
-  color: var(--toggle-key-text);
+  color: var(--key-primary-text-color);
   background-color: var(--key-primary);
   border-bottom: 4px solid var(--key-primary-shadow);
 }
@@ -135,12 +135,8 @@
   opacity: 1;
 }
 
-.radio-label input:focus + .checkmark {
-  box-shadow: 0 0px 8px white;
-}
-
 .theme-header-label {
-  color: var(--toggle-key-text);
+  color: var(--text-color);
   font-size: 12px;
 }
 
