--- a/public/scss/abstracts/_theme.scss
+++ b/public/scss/abstracts/_theme.scss
@@ -52,5 +52,5 @@
   --key-secondary-shadow: hsl(290, 70%, 36%);
 
   --key-secondary-text-color: hsl(52, 100%, 62%);
-  --key-primary-text-color: hsl(0, 0, 100%);
+  --key-primary-text-color: white;
 }
