--- a/public/scss/components/_buttons.scss
+++ b/public/scss/components/_buttons.scss
@@ -13,7 +13,7 @@
 
 .action-key {
   font-size: 1rem;
-  color: var(--toggle-key-text);
+  color: var(--key-primary-text-color);
   background-color: var(--key-primary);
   border-bottom: 4px solid var(--key-primary-shadow);
 }
